<resources>
    <string name="app_name">Crédito para todes</string>
    <string name="welcome_text_title">Precisa aliviar suas contas?</string>
    <string name="welcome_text">Empréstimo fácil e totalmente digital, com condições personalizadas e taxas diferenciadas.</string>
    <string name="start">Começar</string>
    <string name="detail_text_view">Defina quanto precisa, o número de parcelas e tenha dinheiro rápido com taxas diferenciadas</string>
    <string name="title_text_view">Empréstimo pessoal</string>
    <string name="text_view_title_1">Qual empréstimo você precisa?</string>
    <string name="form_text">Precisamos de alguns dados para gerar sua oferta:</string>
    <string name="valor_emprestimo">Qual é o valor que  você precisa?</string>
    <string name="renda_mensal">Renda mensal comprovada</string>
    <string name="nome_completo">Nome completo</string>
    <string name="situacao_profissional">Situação profissional</string>
    <string name="esta_negativado">Está negativado?</string>
    <string name="motivo_emprestimo">Motivo de empréstimo</string>
    <string name="dia_de_vencimento_das_parcelas">Dia de vencimento das parcelas</string>
    <string name="estado_civil">Estado civil</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="motivo_de_emprestimo">Motivo de empréstimo</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="simulation_text_title">Antes, precisamos de alguns dados</string>
    <string name="genero">Gênero</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="termos_de_uso">Li e concordo  com os termos de uso e política de privacidade.</string>
    <string name="simulacao">Simulação</string>
    <string name="confirmacao">Confirmação</string>
    <string name="confirmation_text_title">Confira os dados da sua simulação</string>
    <string name="valor_solicitado">Valor solicitado:</string>
    <string name="confirmation_tv_valor">R$ 0,00</string>
    <string name="confirmation_tv_nome">Nome:</string>
    <string name="nome_cadastrado">Nome cadastrado</string>
    <string name="ata_de_nascimento_cadastrado">Data de nascimento:</string>
    <string name="confirmation_tv_data_nascimento">Data de nascimento:</string>
    <string name="renda_cadastrada">Renda:</string>
    <string name="confirmation_tv_renda">R$ 1.500,00</string>
    <string name="todo">TODO</string>
    <string name="phone_inserted">phone_inserted</string>
    <string name="birth_date_inserted">birth_date_inserted</string>
    <string name="email_inserted">Email inserido</string>
    <string name="confirmar_solicita_o">Confirmar solicitação</string>
    <string name="hint_date">(00/00/0000)</string>
    <string name="confirmation_tv_phone_number">Telefone:</string>
    <string name="telefone_cadastrado">Telefone cadstarado</string>
    <string name="tv_email_confirmation">Email:</string>
    <string name="multiline_text">Seus dados foram cadastrados com sucesso e sua solicitação está em análise. </string>
    <string name="insira_seu_email">seumail@email.com</string>
    <string name="confirmar_solicitao">Confirmar solicitação</string>
    <string name="final_message">Sua solicitação foi realizada com sucesso e está em análise.</string>
    <string name="final_message_name">Name,</string>


</resources>