<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity4">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ll_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title_activity_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:text="@string/confirmation_text_title" />

        <LinearLayout
            android:id="@+id/ll_container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/confirmation_tv_nome"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_name_inserted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/nome_cadastrado"
                android:textSize="16sp" />


        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_birth_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/confirmation_tv_data_nascimento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_birth_date_inserted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/data_de_nascimento"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_phone_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/confirmation_tv_phone_number"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"  />

        <TextView
            android:id="@+id/tv_phone_number_inserted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/telefone_cadastrado"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tv_email_confirmation"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_email_inserted"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/email_inserted"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_container_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_income_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/renda_cadastrada"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_income_iserted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="R$ 0,00"
            android:textSize="16sp"  />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/valor_solicitado"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_value_inserted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="R$ 0,00"
            android:textSize="16sp" />

    </LinearLayout>

        <Button
            android:id="@+id/btn_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:text="@string/confirmar_solicitao"
            android:backgroundTint="@color/blue_200" />



    </LinearLayout>

</RelativeLayout>