<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <ImageView
            android:id="@+id/iv_home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_toolbar_icon" />

        <TextView
            android:id="@+id/tv_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Empréstimos"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/form_text_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_emprestimo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="R$ 0,00"
            android:textColorHint="@color/pink_500"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="(mínimo: R$ 1.000 / máximo: R$ 30.000)"
            android:textSize="10sp"
            android:textAlignment="viewEnd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renda_mensal"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="R$ 0,00"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Seu nome completo"
            android:textSize="16sp" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="(00/00/0000)"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="(27) 99988-7766"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="nome@email.com"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/termos_de_uso"
                android:textSize="12sp"
                android:lineHeight="20dp"
                />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

            <Button
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:text="Simular empréstimo"
                android:backgroundTint="@color/blue_200" />


    </LinearLayout>



</RelativeLayout>